--- a/index.html
+++ b/index.html
@@ -172,9 +172,53 @@
                     </li>
                 </ul>
             </div>
-        </div>
+
+            <div class="page-indicator">
+                <i class="fa-solid fa-angles-left"></i>
+                <span class="page-dot active">1</span>
+                <span class="page-dot">2</span>
+                <span class="page-dot">3</span>
+                <span class="page-dot">4</span>
+                <span class="page-dot">5</span>
+                <i class="fa-solid fa-ellipsis"></i>
+                <span class="page-dot">10</span>
+                <i class="fa-solid fa-angles-right"></i>
+            </div>
+        </div>  
     </div>
 
+
+    <!------------------------------------ footer ------------------------------------>
+    <div class="footer">
+        <div class="footer-container">
+            <div class="footer-logo">
+                <img src="train.png" alt="">
+                <img src="https://play-lh.googleusercontent.com/Pe16wXRx-kIEU4tz4kLZEBleULPO9FXpePPZjokKuO8tssXA9jeIJRGxHuDU1Bn1xAI4" alt="">
+                <img src="download-app.png" alt="">
+            </div>
+
+            <div class="footer-info">
+            <h6>
+            24小時緊急通報電話：1933 
+            </h6>
+            <p class="footer-info-text">
+            (市話、手機，僅限發現軌道、平交道、橋樑及隧道等有障礙物之通報專用) 
+            </p>
+            <p class="footer-info-text">客服電話 (一般服務諮詢及旅客申訴)：0800-765-888、02-2191-0096
+            </p>
+
+            
+
+        </div>
+
+        <div class="footer-links">
+            <ul>
+                <li><a href="">關於我們</a></li>
+                <li><a href="">服務條款</a></li>
+                <li><a href="">隱私政策</a></li>
+                <li><a href="">聯絡我們</a></li>
+            </ul>
+        </div>
     </div>
     
 
