create booking page

--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
 
 <!---------------------- search-bar + logo --------------------->
             <div class="search-bar">
-                <img src="logo.png" alt="">
+                <img src="./image/logo.png" alt="">
                 <input type="text" placeholder="搜尋">
             </div>
 
@@ -45,17 +45,17 @@
     </header>
 
 <!------------------------------ menu bar ---------------------->
-    <div class="menu-bar">
-        <ul>
-            <li class="has-dropdown">
-                <a href="">查詢車票</a>
-                <ul class="dropdown">
-                    <li><a href="">個人／團體訂票</a></li>
-                    <li><a href="">剩餘座位查詢</a></li>
-                    <li><a href="">團體訂票剩餘座位查詢</a></li>
-                    <li><a href="">個人訂票紀錄查詢</a></li>
-                </ul>
-            </li>
+<div class="menu-bar">
+    <ul>
+        <li class="has-dropdown">
+            <a href="#">查詢車票</a>
+            <ul class="dropdown">
+                <li><a href="booking.html">個人／團體訂票</a></li>
+                <li><a href="#">剩餘座位查詢</a></li>
+                <li><a href="#">團體訂票剩餘座位查詢</a></li>
+                <li><a href="#">個人訂票紀錄查詢</a></li>
+            </ul>
+        </li>
 
             <li><a href="">列車指南</a>
             </li>
@@ -463,10 +463,10 @@
         <div class="footer-container">
             <!-- APP 下載區塊 -->
             <section class="footer-app">
-                <img src="eapp.png" alt="Taiwan Railway App">
+                <img src="./image/eapp.png" alt="Taiwan Railway App">
                 <div class="footer-download">
-                    <img src="Store download button-1.png" alt="Download on the App Store">
-                    <img src="Store download button.png" alt="Get it on Google Play">
+                    <img src="./image/Store download button-1.png" alt="Download on the App Store">
+                    <img src="./image/Store download button.png" alt="Get it on Google Play">
                 </div>
             </section>
     
@@ -480,7 +480,7 @@
             <!-- 公司資訊 -->
             <section class="footer-company">
                 <div class="footer-logo">
-                    <img src="logo_2.png" alt="Taiwan Railway Logo">
+                    <img src="./image/logo_2.png" alt="Taiwan Railway Logo">
                     <div class="company-details">
                         <p><strong>公司電話：</strong>(02) 2381-5226</p>
                         <p><strong>公司地址：</strong>100230 臺北市中正區北平西路三號</p>
