--- a/booking.html
+++ b/booking.html
@@ -4,10 +4,30 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
+    <link rel="stylesheet" href="../twrailway_redesign/CSS/style.css">
 </head>
 <body>
-    
+    <!----------------------- Process bar ------------------------->
+    <div class="process-container">
+        <div class="step-container">
+            <div class="step-number-container">
+                <div class="step-number">1</div>
+            </div>
+            <div class="step-title">選擇車票種類</div>
+            <i class="fa-solid fa-chevron-right"></i>
+        </div>
 
-    
+    </div>
+
+
+    <!------------------------ Main part -------------------------->
+    <div class="main-container">
+
+    </div>
+
+
+
+
+
 </body>
 </html>
