--- a/footer.html
+++ b/footer.html
@@ -8,15 +8,16 @@
     <title>Document</title>
 </head>
 <body>
+    
     <!------------------------------------ footer ------------------------------------>
     <footer class="footer">
         <div class="footer-container">
             <!-- APP 下載區塊 -->
             <section class="footer-app">
-                <img src="eapp.png" alt="Taiwan Railway App">
+                <img src="./image/eapp.png" alt="Taiwan Railway App">
                 <div class="footer-download">
-                    <img src="Store download button-1.png" alt="Download on the App Store">
-                    <img src="Store download button.png" alt="Get it on Google Play">
+                    <img src="./image/Store download button-1.png" alt="Download on the App Store">
+                    <img src="./image/Store download button.png" alt="Get it on Google Play">
                 </div>
             </section>
     
@@ -30,7 +31,7 @@
             <!-- 公司資訊 -->
             <section class="footer-company">
                 <div class="footer-logo">
-                    <img src="logo_2.png" alt="Taiwan Railway Logo">
+                    <img src="./image/logo_2.png" alt="Taiwan Railway Logo">
                     <div class="company-details">
                         <p><strong>公司電話：</strong>(02) 2381-5226</p>
                         <p><strong>公司地址：</strong>100230 臺北市中正區北平西路三號</p>
