--- a/header.html
+++ b/header.html
@@ -3,7 +3,7 @@
 
 <!---------------------- search-bar + logo --------------------->
             <div class="search-bar">
-                <img src="logo.png" alt="">
+                <img src="./image/logo.png" alt="">
                 <input type="text" placeholder="搜尋">
             </div>
 
