add a link to the booking Page on the plan-trip page

--- a/plan-trip.html
+++ b/plan-trip.html
@@ -25,7 +25,7 @@
         <div class="step-number-container">
             <div class="step-number">1</div>
         </div>
-        <div class="step-title">選擇車票種類</div>
+        <div class="step-title"><a href="booking.html">選擇車票種類</a></div>
     </div>
     <i class="fa-solid fa-chevron-right"></i>
 
