--- a/header.html
+++ b/header.html
@@ -16,6 +16,7 @@
                 <a href="#">公司治理</a>
                 <a href="#">行政相關</a>
                 <a href="#">招商資訊</a>
+                <!-- <i class="fa-solid fa-bars"></i> -->
             </nav>
 
 <!--------------------------- icons --------------------------->
