--- a/plan-trip.html
+++ b/plan-trip.html
@@ -95,7 +95,7 @@
                 </div>
                 
                 <div class="train-number">
-                    <i class="fa-regular fa-square"></i>
+                    <input type="checkbox">
                     <span>已知列車車次</span>
                   </div>
               </div>
@@ -160,7 +160,7 @@
                     </div>
                     
                     <div class="train-number">
-                        <i class="fa-regular fa-square"></i>
+                      <input type="checkbox">
                         <span>已知列車車次</span>
                       </div>
                   </div>
